--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,12 @@
 [project]
 name = "rasterix"
 description = "Raster extensions for Xarray"
-license = {file = "LICENSE"}
+license = "Apache-2.0"
 readme = "README.md"
 requires-python = ">=3.10"
 keywords = ["xarray"]
 classifiers = [
     "Development Status :: 4 - Beta",
-    "License :: OSI Approved :: Apache Software License",
     "Natural Language :: English",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
