--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,9 @@ features = [
     "io",
 ]
 
+[[tool.hatch.envs.test.matrix]]
+python = ["3.10", "3.13"]
+
 [tool.hatch.envs.test.scripts]
 run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov-report xml --cov=src --junitxml=junit.xml -o junit_family=legacy"
 run-coverage-gpu = "pip install cupy-cuda12x && pytest -m gpu --cov-config=pyproject.toml --cov=pkg --cov-report xml --cov=src --junitxml=junit.xml -o junit_family=legacy"
