--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,8 @@ test = [
   "rioxarray",
   "exactextract",
   "sparse",
-  "netCDF4"
+  "netCDF4",
+  "hypothesis",
 ]
 
 [tool.hatch]
@@ -73,6 +74,7 @@ dependencies = [
     "coverage",
     "pytest",
     "pytest-cov",
+    "pytest-xdist"
 ]
 features = ["test"]
 
@@ -80,8 +82,8 @@ features = ["test"]
 python = ["3.10", "3.13"]
 
 [tool.hatch.envs.test.scripts]
-run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov-report xml --cov=src --junitxml=junit.xml -o junit_family=legacy"
-run-coverage-html = "pytest --cov-config=pyproject.toml --cov=pkg --cov-report html --cov=src"
+run-coverage = "pytest -nauto --cov-config=pyproject.toml --cov=pkg --cov-report xml --cov=src --junitxml=junit.xml -o junit_family=legacy"
+run-coverage-html = "pytest -nauto --cov-config=pyproject.toml --cov=pkg --cov-report html --cov=src"
 run-pytest = "run-coverage --no-cov"
 run-verbose = "run-coverage --verbose"
 run-mypy = "mypy src"
