--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,10 +37,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install hatch
-      - name: Install typing_extensions (temp fix)
-        # TODO: remove when using next Xarray release (after v2025.6.0)
-        run: |
-          python -m pip install typing_extensions
       # https://github.com/actions/cache/blob/main/tips-and-workarounds.md#update-a-cache
       - name: Restore cached hypothesis directory
         id: restore-hypothesis-cache
@@ -54,6 +50,10 @@ jobs:
         run: |
           hatch env create test.py${{ matrix.python-version }}
           hatch env run -e test.py${{ matrix.python-version }} list-env
+      - name: Install typing_extensions (temp fix)
+        # TODO: remove when using next Xarray release (after v2025.6.0)
+        run: |
+          hatch env run --env test.py${{ matrix.python-version }} pip install typing_extensions
       - name: Run Tests
         run: |
           hatch env run --env test.py${{ matrix.python-version }} run-coverage
