--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,10 +49,17 @@ test = [
   "hypothesis",
 ]
 docs = [
-    'pyproj',
-    'rioxarray', # TODO: remove once assign_index doesn't need it.
+  "geodatasets",
+  "pooch",
+  "dask-geopandas",
+  "rasterio",
+  "rioxarray",
+  "exactextract",
+  "sparse",
+  "netCDF4",
     # Doc building
     'sphinx',
+    'sphinx-autoapi',
     'sphinx-autobuild>=2021.3.14',
     'sphinx-copybutton',
     'sphinx-remove-toctrees',
