Make RasterIndex CRS-aware (#31)
Co-authored-by: Deepak Cherian <dcherian@users.noreply.github.com>
Co-authored-by: Scott Henderson <scottyhq@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "affine",
     "pandas>=2",
     "numpy>=2",
+    "xproj>=0.2.0",
     "xarray>=2025",
 ]
 dynamic=["version"]
